@@ -24,6 +24,16 @@ class TestFunctional(unittest.TestCase):
             title = SchemaNode(String())
             cool = SchemaNode(Boolean(), default=True, missing=True)
             series = SeriesSchema()
+            nickname = SchemaNode(
+                String(),
+                widget=deform.widget.TextInputWidget(
+                    attributes={
+                        'maxlength': 10,
+                        'placeholder': 'Nickname',
+                        'disabled': 'disabled'
+                    }
+                )
+            )
 
         schema = MySchema()
         return schema
@@ -100,10 +110,25 @@ class TestFunctional(unittest.TestCase):
         self.assertEqual(inputs[12]['name'], '__end__')
         self.assertEqual(inputs[12]['value'], 'series:mapping')
 
+    def test_render_attributes(self):
+        schema = self._makeSchema()
+        form = self._makeForm(schema)
+        html = form.render()
+        soup = self._soupify(html)
+        form = soup.form
+        self.assertEqual(form.get('action', ''), '')
+        inputs = form.findAll('input')
+        self.assertEqual(inputs[10]['name'], 'nickname')
+        self.assertEqual(inputs[10]['value'], '')
+        self.assertEqual(inputs[10]['placeholder'], 'Nickname')
+        self.assertEqual(inputs[10]['disabled'], 'disabled')
+        self.assertEqual(inputs[10]['maxlength'], '10')
+
     def test_widget_deserialize(self):
         filled = {
             'name': 'project1',
             'title': 'Cool project',
+            'nickname': 'petproject',
             'series': {
                 'name':'date series 1',
                 'dates': [{'date': '2008-10-12'}, {'date': '2009-10-12'}],
@@ -116,6 +141,7 @@ class TestFunctional(unittest.TestCase):
                     {'dates': ['2008-10-12', '2009-10-12'],
                      'name': 'date series 1'},
                     'cool': 'false',
+                    'nickname': 'petproject',
                     'name': 'project1',
                     'title': 'Cool project'}
         self.assertEqual(result, expected)
@@ -141,6 +167,7 @@ class TestFunctional(unittest.TestCase):
             {
                 'series': {'dates': [], 'name': null},
                 'cool': 'false',
+                'nickname': null,
                 'name': null,
                 'title': null,
              }
